FRONT fix 🐛: corregir estilo global eliminando overflow y estableciendo list-style a none

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 * {
-  overflow: hidden;
+  list-style: none;
 }
 
 @media (max-width: 640px) {
